--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -28,10 +28,127 @@
         </div>
         <hr class="w-100 mb-1">
 
-        <!-- product table -->
-        <!-- TO BE UPDATED TO DIVS NOT RESPONSIVE -->
+        <!-- product table medium breakpoint-->
         {% if bag_products %}
-        <div class="table-responsive">
+        <div class="d-block d-md-none">
+            {% for product in bag_products %}
+            <div class="row">
+                <!-- image -->
+                <div class="col-12 col-sm-6">
+                    <img class="img-fluid rounded" src="{{ product.product.image.url }}">
+                </div>
+                <!-- description -->
+                <div class="col-12 col-sm-6">
+                    <p class="mt-0">{{ product.product.name }}</p>
+                    <p class="mt-0
+                    {% if product.product.has_sizes != True %}d-none{% endif %}">Size: {{ product.size|upper }}</p>
+                    <p class="mt-0 small text-muted">Product code:{{ product.product.pk }}</p>
+                </div>
+                <!-- price -->
+                <div class="col-12 col-sm-6">
+                    <p class="py-2">€{{ product.product.price }}</p>
+                </div>
+                <!-- form qty update/remove -->
+                <div class="col-12 col-sm-6">
+                    <form class="form update-form" method="POST" action="{% url 'adjust_bag' product.product_id %}">
+                        {% csrf_token %}
+                        <!-- quantity selector -->
+                        <div class="col-12">
+                            <p class="mt-3"><strong>Quantity:</strong></p>
+                            <div class="form-group w-100">
+                                <div class="input-group">
+                                    
+                                    <!-- minus button -->
+                                    <div class="input-group-prepend">
+                                        <button class="decrement-qty btn btn-sm btn-outline-info"
+                                        data-product_id="{{ product.product_id }}" id="decrement-qty_{{ product.product_id }}">
+                                            <span>
+                                                <i class="fas fa-minus fa-sm"></i>
+                                            </span>
+                                        </button>
+                                    </div>
+                                    <!-- quantity number -->
+                                    <input class="form-control form-control-sm qty_input" type="number"
+                                    name="quantity" value="{{ product.quantity }}" min="0" max="99"
+                                    data-product_id="{{ product.product_id }}"
+                                    id="id_qty_{{ product.product_id }}">
+                                    <!-- plus button -->
+                                    <div class="input-group-append">
+                                        <button class="increment-qty btn btn-sm btn-outline-info"
+                                        data-product_id="{{ product.product_id }}"
+                                        id="increment-qty_{{ product.product_id }}">
+                                            <span>
+                                                <i class="fas fa-plus fa-sm"></i>
+                                            </span>
+                                        </button>                                                 
+                                    </div>
+                                    {% if product.product.has_sizes %}
+                                    <input type="hidden" name="product_size" value="{{ product.size }}">
+                                    {% endif %}
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                    <!-- update/remove buttons -->
+                    <a class="update-link text-info small text-decoration-none">Update
+                        <i class="fas fa-sync-alt"></i>
+                    </a>
+                    <a class="remove-item text-danger small float-md-end text-decoration-none" id="remove_{{ product.product_id }}"
+                    data-product_size="{{ product.size }}">Remove
+                        <i class="fas fa-trash-alt"></i>
+                    </a>
+                </div>
+                <!-- subtotal product -->
+                <div class="col-12 col-sm-6 my-2">
+                    <p class="py-2">Product subtotal: €{{ product.product.price | prd_subtotal:product.quantity }}</p>
+                </div>
+            </div>
+            <hr class="w-100 mb-1">
+            {% endfor %} 
+                <tr>
+                    <td colspan="5" class="pt-1 text-end">
+                        <h6 class="text-muted small"><strong >SubTotal: €{{ total|floatformat:2 }}</strong></h6>
+                        <h6 class="text-muted small">Delivery cost:€{{ delivery }}</h6>
+                        <h3>Total: €{{ final_total|floatformat:2 }}</h3>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="5" class="text-end">
+                        <a href="{% url 'products' %}" class="btn btn-outline-info">
+                            <span>
+                                <i class="fas fa-chevron-left"></i>
+                            </span>
+                            <span>Continue shopping</span>
+                        </a>
+                        <!-- CHECK MARGIN TOP -->
+                        <a href="{% url 'products' %}" class="my-2 my-sm-0 btn btn-outline-dark">
+                            <span class="icon">
+                                <i class="fas fa-lock"></i>
+                            </span>
+                            <span class="text-uppercase small">Checkout Securely Now</span>
+                        </a>
+                    </td>
+                </tr>
+            </table>
+        
+        
+            </div>
+            {% else %}
+            <div>
+                <p class="font-subtitle">Your shopping bag is empty</p>
+                <a href="{% url 'products' %}" class="btn btn-outline-info my-2">
+                    <span>
+                        <i class="fas fa-chevron-left"></i>
+                    </span>
+                    <span>Continue shopping</span>
+                </a>
+            </div>
+        </div>
+        {% endif %}
+
+        <!-- product table medium breakpoint-->
+        {% if bag_products %}
+        <div class="table-responsive d-none d-md-block">
             <table class="table align-middle table-hover">
                 <thead>
                     <tr>
