--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -43,8 +43,7 @@
                         {% csrf_token %}
                         <!-- quantity selector -->
                         <div class="col-12">
-                            <p class="mt-3"><strong>Quantity:</strong></p>
-                            <div class="form-group w-100">
+                            <div class="form-group w-100 mt-2">
                                 <div class="input-group">
                                     
                                     <!-- minus button -->
@@ -58,7 +57,7 @@
                                     </div>
                                     <!-- quantity number -->
                                     <input class="form-control form-control-sm qty_input" type="number"
-                                    name="quantity" value="{{ product.quantity }}" min="0" max="99"
+                                    name="quantity" value="{{ product.quantity }}" min="1" max="99"
                                     data-product_id="{{ product.product_id }}"
                                     id="id_qty_{{ product.product_id }}">
                                     <!-- plus button -->
@@ -78,16 +77,15 @@
                             </div>
                         </div>
                     </form>
+
                     <!-- update/remove buttons -->
-                    <div>
-                        <a class="update-link text-info small text-decoration-none">Update
-                            <i class="fas fa-sync-alt"></i>
-                        </a>
-                        <a class="remove-item text-danger small float-end text-decoration-none" id="remove_{{ product.product_id }}"
-                        data-product_size="{{ product.size }}">Remove
-                            <i class="fas fa-trash-alt"></i>
-                        </a>
-                    </div>
+                    <a class="update-link text-info small text-decoration-none">Update
+                        <i class="fas fa-sync-alt"></i>
+                    </a>
+                    <a class="remove-item text-danger small float-end text-decoration-none" id="remove_{{ product.product_id }}"
+                    data-product_size="{{ product.size }}">Remove
+                        <i class="fas fa-trash-alt"></i>
+                    </a>
                 </div>               
                 <!-- description -->
                 <div class="col-12 col-sm-6">
@@ -121,7 +119,6 @@
                         </span>
                         <span>Continue shopping</span>
                     </a>
-                    <!-- CHECK MARGIN TOP -->
                     <a href="{% url 'products' %}" class="my-2 my-sm-0 btn btn-outline-dark">
                         <span class="icon">
                             <i class="fas fa-lock"></i>
@@ -190,7 +187,7 @@
                                             </div>
                                             <!-- quantity number -->
                                             <input class="form-control form-control-sm qty_input" type="number"
-                                            name="quantity" value="{{ product.quantity }}" min="0" max="99"
+                                            name="quantity" value="{{ product.quantity }}" min="1" max="99"
                                             data-product_id="{{ product.product_id }}"
                                             id="id_qty_{{ product.product_id }}">
                                             <!-- plus button -->
@@ -240,7 +237,6 @@
                             </span>
                             <span>Continue shopping</span>
                         </a>
-                        <!-- CHECK MARGIN TOP -->
                         <a href="{% url 'products' %}" class="my-2 my-sm-0 btn btn-outline-dark">
                             <span class="icon">
                                 <i class="fas fa-lock"></i>
@@ -291,4 +287,5 @@
          });
     })
 </script>
+
 {% endblock %}
