--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
-{% load bag_tools %}
+
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
+{% endblock %}
 
 {% block content %}
 
@@ -26,7 +29,52 @@
                 <h4 class="d-sm-none" >Your Shopping Bag:</h4>
             </div>
         </div>
-        <hr class="w-100 mb-1">   
-    </div>
+        <hr class="w-100 mb-1">
+
+        <div class="row">
+           <div class="col-12 col-lg-6 mt-2">
+                <p class="text-muted">Please fill out this form below to complete your order:</p>
+                <!-- checkout form -->
+                <form action="{% url 'checkout' %}" method="POST" id="checkout-form">
+                    {% csrf_token %}
+                    <fieldset class="rounded px-3 mb-5">
+                        <legend class="fieldset-label w-auto small text-black px-2">Your details:</legend>
+                        {{ order_form.full_name | as_crispy_field }}
+                        {{ order_form.email | as_crispy_field }}
+                    </fieldset>  
+                    <fieldset class="rounded px-3 mb-5">
+                        <legend class="fieldset-label w-auto small text-black px-2">Shipping info:</legend>
+                        {{ order_form.phone_number | as_crispy_field }}
+                        {{ order_form.country | as_crispy_field }}
+                        {{ order_form.postcode | as_crispy_field }}
+                        {{ order_form.town_or_city | as_crispy_field }}
+                        {{ order_form.street_address1 | as_crispy_field }}
+                        {{ order_form.street_address2 | as_crispy_field }}
+                        {{ order_form.county | as_crispy_field }}
+                        <div class="form-check form-check-inline ms-0 float-start">
+                            {% if user.is_authenticated %}
+                                <label class="form-check-label" for="id-save-info">Save this delivery information to my profile</label>
+                                <input class="form-check-input ms-2 me-0" id="id-save-info" type="checkbox" name="save-info" checked>
+                            {% else %}
+                                <label class="form-check-label" for="id-save-info">
+                                    <a class="text-info" href="{% url 'account_signup' %}">Creat an account</a> or
+                                    <a class="text-info" href="{% url 'account_login' %}">Login</a> to save this information
+                                </label>
+                            {% endif %}
+                        </div>
+                    </fieldset>  
+                    <fieldset class="rounded px-3 mb-5">
+                        <legend class="fieldset-label w-auto small text-black px-2">Payment:</legend>
+                        
+                        <div class="mb-3" id="card-element"></div>
+
+                        <div class="mb-3 text-danger" role="alert" id="card-errors"></div>
+                    
+                    </fieldset>  
+                </form>
+           </div>
+       </div>
+   </div>
+
 </div>
 {% endblock %}
